[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/dreamscape/MainMenu/TagsList.gd" type="Script" id=2]

[node name="TagsList" type="HBoxContainer"]
margin_right = 500.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 80 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 43.0
margin_right = 136.0
margin_bottom = 57.0
text = "Card Pool Mechanics:"

[node name="DescriptionPopup" type="PopupPanel" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TagDescription" type="Label" parent="DescriptionPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 36.0
margin_bottom = 36.0
